[gd_scene load_steps=4 format=3 uid="uid://ctkwhl4ngqpse"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_c870q"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7i31y"]
radius = 0.3
height = 1.8
radial_segments = 16
rings = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_grgp8"]
radius = 0.3
height = 1.8

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 18
collision_mask = 31
platform_on_leave = 2
script = ExtResource("1_c870q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7i31y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_grgp8")

[node name="camera_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.582769, 0)

[node name="Camera3D" type="Camera3D" parent="camera_pivot"]
cull_mask = 524287

[node name="RayCast3D" type="RayCast3D" parent="camera_pivot/Camera3D"]
enabled = false
target_position = Vector3(0, 0, -1.5)

[node name="Control" type="Control" parent="camera_pivot/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="camera_pivot/Camera3D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.776471, 0.776471, 0.776471, 1)

[node name="mouse_tracker_l_r" type="Node3D" parent="."]

[node name="mouse_tracker_u_d" type="Node3D" parent="."]
